whoami-quick-test/whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  labels:
    run: whoami
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: whoami
